# Zelus

./: README.md  keep_alive.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: artist-delete-timeline.yml  artist-follow-people.yml  artist-like-tweets.yml  artist-reply.yml  artist-retweet.yml  artist-tweet.yml  artist-unfollow-people.yml  hello_world.yml  influencer-follow-people.yml  influencer-like-tweets.yml  influencer-retweet.yml  tweet-nft-and-commit.yml
data/: credentials.json  nfts.json
scripts/: hello_world.py
scripts/artist/: cache_nfts.json  delete_my_tweets_timeline.py  follow_people.py  hashtags.json  influencers.json  like_tweets.py  reply_with_nft.py  retweet.py  tweet_nft.py  unfollow_people.py
scripts/influencer/: follow_people.py  hashtags.json  influencers.json  like_tweets.py  news.json  retweet.py
scripts/test/: cache_nfts.json  hello_world.py  test_nft_tweet.py
zelus/: __init__.py
zelus/src/core/interfaces/infrastructure/: twitter.py
zelus/src/core/interfaces/repositories/: twitter.py
zelus/src/infrastructure/twitter/: infrastructure.py
zelus/src/repositories/access/: repository.py
zelus/src/repositories/bearer/: repository.py
zelus/src/services/Twitter/: service.py  twitter.py
zelus/src/services/artist/: service.py
zelus/src/services/influencer/: service.py
